--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,8 @@ android {
     compileSdkVersion 23
     buildToolsVersion "23.0.0"
 
+    useLibrary 'org.apache.http.legacy'
+
     defaultConfig {
         applicationId "com.example.septiawanajip.printnet"
         minSdkVersion 15
@@ -29,4 +31,5 @@ dependencies {
     compile 'com.afollestad.material-dialogs:core:0.9.0.2'
     compile 'com.android.support:recyclerview-v7:23.0.+'
     compile 'com.android.support:cardview-v7:23.3.0'
+    compile 'com.makeramen:roundedimageview:2.2.1'
 }
