--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <application
         android:allowBackup="true"
         android:icon="@drawable/boy"
@@ -28,6 +28,7 @@
             android:theme="@style/MyMaterialTheme"></activity>
         <activity android:name=".Tab.WebViewActivity"></activity>
         <activity android:name=".DownloadFile.DownloadFile"></activity>
+        <activity android:name=".ListCatatan.ListCatatanActivity"></activity>
     </application>
 
 </manifest>
